Mostly JS practice

--- a/CSS_Practice/11/index.html
+++ b/CSS_Practice/11/index.html
@@ -4,26 +4,14 @@
 	<meta charset="utf-8">
 	<title>Document</title>
 
-	<style>
-		body{
-			color:blue;
-			background-color: red;
-		}
-
-		h1{
-			color:green;
-}
-	</style>
-
-
+	<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-	<h1>CSS Tutorial</h1>
-	<main>
-		<h1>A third header</h1>
+	<h1 id="mikes-h1">CSS Tutorial</h1>
+	<main class="fancy-border blue-text">
 		<p>The Nintendo GameCube is a home video game console released by Nintendo in Japan and North America in 2001 and in PAL territories in 2002. The GameCube is Nintendo's entry in the sixth generation of video game consoles and the successor to their previous console, the Nintendo 64. The GameCube competed with Sony's PlayStation 2 and Microsoft's Xbox.</p> 
-	</main>
+	</main> 
 	
 
 </body>
