--- a/CSS_Practice/10/index.html
+++ b/CSS_Practice/10/index.html
@@ -4,18 +4,7 @@
 	<meta charset="utf-8">
 	<title>Document</title>
 
-	<style>
-		body{
-			color:blue;
-			background-color: red;
-		}
-
-		h1{
-			color:green;
-}
-	</style>
-
-
+	<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
