--- a/HTML_Practice/W3Schools_Excercises/attributes.html
+++ b/HTML_Practice/W3Schools_Excercises/attributes.html
@@ -1,4 +1,10 @@
-<!-- Add a "tooltip" to the paragraph below with the text "About W3Schools".-->
+<!--  
+Add a "tooltip" to the paragraph below with the text "About W3Schools".
+Set the size of the image to 250 pixels wide and 400 pixels tall.
+Make the element below into a link that goes to "https://www.w3schools.com".
+Specify an alternate text for the image.
+Alternate text is useful when the image cannot be displayed, like when the page is read by a screen reader.
+ -->
 
 
 
@@ -8,11 +14,13 @@
 <html>
 <head>
 	<title></title>
-</head>
-<body>
+</head>		
+<body>	
 
-<p title="About W3Schools">W3Schools is a web developer's site.</p>
-
+	<p title="About W3Schools">W3Schools is a web developer's site.</p>
+	<img src="w3schools.jpg" width="250 height="400">
+	<a href="https://www.w3schools.com">This is a link</a>
+	<img src="w3schools.png" alt="w3schools Logo">
 
 </body>
 </html>
