--- a/HTML_Practice/W3Schools_Excercises/headings.html
+++ b/HTML_Practice/W3Schools_Excercises/headings.html
@@ -1,3 +1,7 @@
+Use the correct HTML tag to add a heading with the text "London".
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,6 +10,41 @@
 <body>
 
 	<h1>London</h1>
+
+
+	<h1>Hello</h1>
+
+	<h2>Hello</h2>
+
+	<h3>Hello</h3>
+
+	<h4>Hello</h4>
+
+	<h5>Hello</h5>
+
+	<h6>Hello</h6>
+
+	
+	<h1>
+		Universal Studios Presents
+	</h1>
+
+
+	<h2>
+		Jurassic Park
+	</h2>
+
+
+	<h3>
+		About
+	</h3>
+
+
+	<p>
+		On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!
+	</p>
+
+
 
 </body>
 </html>
