--- a/JS_Practice/03/index.html
+++ b/JS_Practice/03/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Creating Objects Function Constroctors</h1>
-<script src="script.js"></script>
+<script src="script4.js"></script>
 </body>
 </html>
