--- a/HTML_Practice/W3Schools_Excercises/styles.html
+++ b/HTML_Practice/W3Schools_Excercises/styles.html
@@ -1,13 +1,37 @@
-<!-- Use the correct HTML attribute, and CSS, to set the color of the paragraph to "blue".
+<!-- 
+Use the correct HTML attribute, and CSS, to set the color of the paragraph to "blue".
+Use CSS to set the font of the paragraph to "courier".
+Use CSS to center align the paragraph.
+Use CSS to set the text size to 50 pixels.
+Use CSS to set the background-color of the document to yellow.
+Use CSS to center align the document.
  -->
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
 	<title></title>
 </head>
-<body>
+<body style="background-color:yellow; text-align: center;">
+	
+	<h1>This is a heading</h1>
+
+	<p>This is a paragraph.</p>
 
  <p style="color:blue;">This is a paragraph.</p>
+ <p style="font-family:courier;">This is a paragraph.</p>
+ <p style="text-align:center;">This is a paragraph.</p>
+ <p style="font-size:50px;">This is a paragraph.</p>
+
+
+
 
 </body>
 </html>
