--- a/BS4_Practice/buttons.html
+++ b/BS4_Practice/buttons.html
@@ -50,7 +50,7 @@ Add a Bootstrap class to group the buttons vertically.
     <button class="btn btn-danger">Danger</button>
     <button class="btn btn-primary btn-lg">Button</button>
     <button class="btn btn-primary btn-sm">Button</button>
-    <button class="btn btn-primary btn-block">Button</button>
+    <button class="btn btn-primary btn-block">Button4</button>
     <a href="#" class="btn btn-primary disabled">My link</a>
     <div class="btn-group">
       <button class="btn btn-primary">Apple</button>
